Testing drop down menu in home page to prevent sticky menu covering information

--- a/app/assets/stylesheets/home.css.sass
+++ b/app/assets/stylesheets/home.css.sass
@@ -15,14 +15,13 @@
   text-align: center
 
 .categories_box
-  width: 300px
   position: fixed
-  margin: 0px 0px 0px 30px
-  align: left
+  float: left
+  margin-left: 5%
 
 
 .categories_box p, .categories_box ul.nav li, .categories_box
-  text-align: center
+  text-align: left
 
 .categories_box p
   background-color: #3399ff
@@ -35,7 +34,7 @@
 
 .project_box
   margin-top: 10px
-  border: 2px solid grey
+
   font-weight: bold
 
 .knowledge
